# unrest

./: .env  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  README.md  README.tmpl  benchmark.txt  docker-compose.yml  entrypoint.py  justfile  mkdocs.yml  pyproject.toml
benchmark/fastapi/: Dockerfile  entrypoint.py  pyproject.toml
benchmark/unrest/: entrypoint.py
contexts/: __init__.py  _context.py  auth.py  observability.py
docs/: comparison.md  contexts.md  index.md  quickstart.md  tutorial.md
sql/migrations/: 000000000000__tests.sql
tests/: quickstart.py  test_api.py  test_context.py  test_quickstart.py
unrest/: __init__.py  api.py  app.py  auth.py  cli.py  client.py  config.py  context.py  db.py  http.py  migrations.py  observability.py  router.py  routing.py  serialisation.py  tasks.py  testing.py  utils.py
unrest/api/: __init__.py  client.py  payload.py
unrest/app/: __init__.py
unrest/cli/: __init__.py
unrest/cli/assets/: .env  demo.py
unrest/cli/assets/sql/migrations/: 000000000000__init.sql.temp
unrest/contexts/: __init__.py  _context.py  auth.py  config.py  observability.py
unrest/db/: __init__.py  migrations.py  pool.py  sql.py
unrest/db/migrations/: __init__.py
unrest/init/: Dockerfile.dev  demo.py  docker-compose.yml
unrest/init/html/: index.html
unrest/init/tests/: test_demo.py
